<resources>
    <string name="app_name">FinkUp</string>
    <string name="add_new_thought">Add new thought</string>
    <string name="back_to_main_activity">Back to Main Activity</string>
    <string name="fink_logo">Fink Logo</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="done">Done</string>
    <string name="search_a_fink">Search a Fink</string>
    <string name="option">Option</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
</resources>